syntax = "proto3";

package Query;

message GetUserProfileFromIdDto {
  string userId = 1;
}

message GetUserProfileFromAuthIdDto {
  string userAuthId = 1;
}

message UserProfileMessage {
  string userId = 1;
  string email = 2;
  string userAuthId = 3;
  string userName = 4;
  string avatar = 5;
  string handle = 6;
  bool hasChannel = 7;
  optional string phoneNumber = 8;
  optional bool isPhoneNumberVerified = 9;
  optional string dob = 10;
}

message GetChannelFromIdDto {
  string channelId = 1;
}

message GetChannelFromUserIdDto {
  string userId = 1;
}

message ChannelMessage {
  string channelId = 1;
  string userId = 2;
  string coverImage = 3;
  string bio = 4;
}

message GetUserProfileResponse {
  bool found = 1;
  optional UserProfileMessage user = 2;
}

message GetChannelResponse {
  bool found = 1;
  optional ChannelMessage channel = 2;
}

service QueryService {
  rpc GetUserProfileFromId(GetUserProfileFromIdDto) returns (GetUserProfileResponse) {}
  rpc GetUserProfileFromAuthId(GetUserProfileFromAuthIdDto) returns (GetUserProfileResponse) {}
  rpc GetChannelFromId(GetChannelFromIdDto) returns (GetChannelResponse) {}
  rpc GetChannelFromUserId(GetChannelFromUserIdDto) returns (GetChannelResponse) {}
}